--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -11,6 +11,7 @@ $lato: 'Lato', sans-serif;
 
 h1, h2, h3{
   font-family: $league;
+	text-align: center;
 }
 
 h4{
